traces/bug_286.txt
examples++-load/shell.cpp:233: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/shell.cpp:233:1: initialization of callDoLoadInit
231.   }
232.   
233. > LOADFUNC(init);

examples++-load/shell.cpp:233:1: call to DoLoadInit
231.   }
232.   
233. > LOADFUNC(init);

examples++-load/shell.cpp:233:1: call to addInitFunct
  231.   }
  232.   
  233. > LOADFUNC(init);

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
